<resources>
    <string name="app_name">MindfulMoments</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_mindful_moments">WELCOME TO MINDFUL MOMENTS!</string>
    <string name="listen_to_silence_it_has_much_to_say">LISTEN TO SILENCE IT HAS MUCH TO SAY</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_details_to_sign_up">Enter Details to Sign Up</string>
    <string name="manish123_gmail_com">manish123@gmail.com</string>
    <string name="welocme_manish">Welocme Manish</string>
    <string name="header_image">Header Image</string>
    <string name="header_images">HeaderImages</string>
    <string name="open_navigation_drawer"> Open Navigation Drawer</string>
    <string name="closed_navigation_drawer">Closed Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="please_rate_us">Please Rate Us!</string>

    <string name="submit">Submit</string>
    <string name="practice_deep_breathing_by_inhaling_slowly_through_your_nose_filling_your_lungs_with_air_and_then_exhaling_slowly_through_your_mouth_repeat_this_process_several_times_to_relax_your_mind_and_body">Practice deep breathing by inhaling slowly through your nose, filling your lungs with air, and then exhaling slowly through your mouth. Repeat this process several times to relax your mind and body.</string>
    <string name="services_we_provide">***Services We Provide***</string>
    <string name="explore_the_beauty_of_nature_with_calming_nature_sounds">Explore the beauty of nature with calming nature sounds.</string>
    <string name="nature_sound_fact">"Nature sounds, such as the rustling of leaves, the chirping of birds, and the sound of flowing water, have been shown to reduce stress and promote relaxation".</string>
    <string name="sessions">Sessions</string>
    <string name="sounds">Sounds</string>
    <string name="breathing">Breathing</string>
    <string name="welcome_to_mindfull_moments">Welcome to MindFull Moments</string>
    <string name="login_page">Login Page</string>
    <string name="track_various_activities_here">Track Various Activities Here</string>
    <string name="play_various_activities">Play Various Activities</string>
    <string name="todo1">TODO</string>
    <string name="play_music">Play Music</string>
    <string name="sign_up_illustration">Sign Up Illustration</string>
    <string name="a_touchstone_to_create_positive_habits_maintain_accountability_and_increase_self_reflection">A TouchStone to create positive habits , maintain accountability and increase self reflection</string>
    <string name="guided_activities_are_designed_to_help_children_achieve_specific_learning_goals_while_allowing_them_autonomy_to_explore_and_use_their_imagination_the_adult_guides_the_activity_by_providing_support_asking_open_ended_questions_making_encouraging_comments_and_actively_observing_the_child_s_interests_skills_and_challenges">Guided activities are designed to help children achieve specific learning goals while allowing them autonomy to explore and use their imagination. The adult guides the activity by providing support, asking open-ended questions, making encouraging comments, and actively observing the child\'s interests, skills, and challenges.</string>
    <string name="various_activities">Various Activities:</string>
    <string name="unlike_normal_breathing_taking_deep_breaths_encourages_you_to_slow_down_and_pay_attention_to_your_body_as_you_inhale_and_exhale">Unlike Normal Breathing ,taking deep breaths encourages you to slow down and pay attention to your body as you inhale and exhale.</string>
    <string name="start_breathing_exedrcises">Start Breathing Exedrcises</string>
    <string name="start_deep_breathing">Start Deep Breathing</string>

</resources>
