<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:icon="@drawable/baseline_add_home_24"
        android:id="@+id/menu_home"
        />

    <item
        android:title="@string/activity"
        android:icon="@drawable/baseline_local_activity_24"
        android:id="@+id/menu_activity" />
    <item
        android:title="@string/log_out"
        android:id="@+id/menu_logOut"
        android:icon="@drawable/baseline_logout_24"/>

    <item android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24">
        <menu>
            <item
                android:id="@+id/menu_mode_toggle"
                android:title="Change Theme"
                android:checkable="false"
                android:checked="false"
                app:actionViewClass="android.widget.Switch" />
        </menu>

    </item>

    <item android:title="@string/communicate"
        android:icon="@drawable/baseline_arrow_forward_24">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/menu_rate"
                android:icon="@drawable/baseline_star_rate_24"
                android:title="@string/rate" />
        </menu>
    </item>
</menu>
